# OneMod

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  setup.cfg
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report-issue.md  feature-request.md
.github/workflows/: build-to-pages.yml  build.yml  ci.yml  deploy.yml  docs.yaml  docs.yml  testing.yml
docs/: Makefile  README.md  build.py  conf.py  developer_guide.md  developer_guide.rst  index.rst  installation.rst  meta.toml  usage.rst
docs/_static/css/: custom.css
docs/_templates/sidebar/: variant-selector.html
docs/api_reference/: index.rst  onemod.main.rst  onemod.pipeline.rst  onemod.stage.rst  pipeline.rst
docs/developer_guide/: branches_and_versioning.rst  contributing_code.rst  contributing_docs.rst  index.rst  pull_requests.rst  setup.rst  testing.rst
docs/developers_guide/: index.rst  setup.rst
docs/example/: README.md  example.rst  index.rst
docs/example/config/: README.md  resources.yml  settings.yml
docs/getting_started/: index.rst  installation.rst  onemod_support.rst  quickstart.rst
docs/stages/: index.rst  regmod_smooth.rst  rover_covsel.rst  spxmod.rst  swimr.rst  weave.rst
docs/user_guide/: advanced_usage.rst  core_concepts.rst  index.rst
docs/user_guide/stages/: custom.rst  index.rst  kreg.rst  modrover.rst  spxmod.rst
docs/user_manual/: core_concepts.rst  glossary.rst  quickstart.rst
docs/user_manual/stages/: custom.rst  index.rst  kreg.rst  rover.rst  spxmod.rst
examples/: custom_stage.py  dummy1.py  dummy2.py  example.py  example1.py  example2.py  example3.py  example_onemod_pipeline_representation.json  example_pipeline.json  jobmon_example.py  local_example.py  onemod_build_save_run.md  onemod_full_example1.py  pipeline_example.py  project_directory_structure_ideas.md  run_onemod.sh
examples/Intermediates/: jobmon_wf_1.json  jobmon_wf_Kelsey_1.json
src/onemod/: __init__.py  main.py  pipeline.py  stage.py  utils.py
src/onemod/action/: action.py  rover_covsel_model.py
src/onemod/actions/: action.py
src/onemod/application/: api.py  base.py  ensemble_application.py  kreg_application.py  regmod_smooth_application.py  rover_covsel_application.py  spxmod_application.py  uncertainty_application.py  weave_application.py
src/onemod/backend/: __init__.py  jobmon.py  jobmon_backend.py  local_backend.py  utils.py
src/onemod/base_models/: __init__.py  serializable.py
src/onemod/config/: __init__.py  base.py
src/onemod/constraints/: __init__.py  base.py  functions.py
src/onemod/data/: collect_results.py  delete_results.py  initialize_results.py  validation.py
src/onemod/datatools/: __init__.py  config_interface.py  data_interface.py  directory_manager.py  interface.py  io.py
src/onemod/diagnostics/: __init__.py  plots.py
src/onemod/dtypes/: __init__.py  column_spec.py  data.py  unique_list.py  unique_sequence.py  validation.py
src/onemod/fsutils/: __init__.py  config_interface.py  config_loader.py  data_interface.py  data_loader.py  interface.py  io.py  path_manager.py
src/onemod/io/: __init__.py  base.py
src/onemod/modeling/: metric.py  residual.py  uncertainty.py
src/onemod/models/: ensemble_model.py  regmod_smooth_model.py  rover_covsel_model.py  rover_model.py  swimr_model.py  weave_model.py
src/onemod/orchestration/: stage.py  templates.py
src/onemod/redesign/: README.md  config.py  examples.py  parameters.py  pipeline.py  stage.py  subsets.py
src/onemod/scheduler/: scheduler.py  scheduler_tg.py  scheduling_utils.py  templates.py
src/onemod/schema/: __init__.py  base.py  config.py  onemod.py  validate.py
src/onemod/serialization/: __init__.py  functions.py
src/onemod/serializers/: __init__.py  functions.py
src/onemod/setup/: config.py  jobmon_web_server.py
src/onemod/stage/: __init__.py  base.py
src/onemod/types/: __init__.py  array.py  bounded_float.py  bounded_integer.py  column_spec.py  data.py  filepath.py  float.py  integer.py
src/onemod/utils/: __init__.py  custom_classes.py  data_io_handler.py  metric.py  parameters.py  residual.py  subsets.py  uncertainty.py
src/onemod/validation/: __init__.py  error_handling.py
tests/: conftest.py  resources.yml  settings.yml  test_input.py  test_main.py  test_output.py  test_pipeline.py  test_stage_io.py  test_workflow_creation.py
tests/e2e/: test_e2e_dummy_pipeline_sequential.py  test_e2e_jobmon_backend.py  test_e2e_jobmon_pipeline.py  test_e2e_local_backend.py  test_e2e_onemod_example1_sequential.py  test_e2e_onemod_mortality_estimates_sequential.py  test_e2e_onemod_one_point_oh_sequential.py  test_e2e_orchestration.py  test_e2e_orchestration_jobmon.py  test_e2e_orchestration_local.py
tests/e2e/backend/: test_jobmon_backend.py  (+1 more)
tests/helpers/: dummy_pipeline.py  dummy_stages.py  get_expected_args.py  jobmon_helpers.py  orchestration_helpers.py  utils.py
tests/integration/: test_integration_data_type_constraints.py  test_integration_jobmon_backend.py  test_integration_model_config.py  test_integration_pipeline_build.py  test_integration_pipeline_evaluate.py  test_integration_pipeline_stages.py  test_integration_stage_io.py  test_integration_stage_io_validation.py
tests/redesign/: test_pipeline.py
tests/test_application/: test_rover_covsel_application.py
tests/test_models/: test_regmod_smooth_model.py  test_rover_model.py  test_weave_model.py
tests/test_scheduler/: test_end_to_end.py  test_ensemble_stage.py  test_regmod_smooth_stage.py  test_rover_stage.py  test_swimr_stage.py  test_task_template_creation.py  test_weave_stage.py
tests/test_schema/: test_onemod_config.py  test_parent_config.py  test_rover_config.py
tests/test_stages/: test_ensemble_stage.py  test_rover_stage.py  test_swimr_stage.py  test_upstream_task_callback.py  test_weave_stage.py
tests/types/: array.py  bounded_float.py  bounded_integer.py  data.py  filepath.py  float.py  integer.py
tests/unit/: test_pipeline.py
(+70 files in other folders)
