[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "onemod"
version = "0.3.0"
description = "A pipeline package for estimating scalar quantity by leveraging covariates and correlations across multiple dimensions."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "IHME Math Sciences", email = "ihme.math.sciences@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fire",
    "loguru",
    "kreg @ git+https://github.com/ihmeuw-msca/kreg.git",
    "matplotlib",
    "modrover @ git+https://github.com/ihmeuw-msca/modrover.git@v0.1.3",
    "pandas",
    "pyarrow",
    "pydantic",
    "scipy",
    "seaborn",
    "spxmod @ git+https://github.com/ihmeuw-msca/spxmod.git@v0.2.1",
    "regmod == 0.1.2",
    "weighted-average >= 1.3.0",
    "xspline" == 0.0.7,
]

[project.optional-dependencies]
jobmon = ["jobmon_installer_ihme"]
test = ["pytest", "nox"]
docs = ["sphinx", "sphinx-autodoc-typehints", "furo"]

[project.urls]
github = "https://github.com/ihmeuw-msca/OneMod"

[project.scripts]
onemod = "onemod.main:main"
