[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "onemod"
version = "0.3.0"
description = "A pipeline package for estimating scalar quantity by leveraging covariates and correlations across multiple dimensions."
readme = "README.md"
requires-python = ">=3.9, <3.13"
license = { file = "LICENSE" }
authors = [
    { name = "IHME Math Sciences", email = "ihme.math.sciences@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fire",
    "kreg @ git+https://github.com/ihmeuw-msca/kreg.git",
    "modrover @ git+https://github.com/ihmeuw-msca/modrover.git@v0.1.3",
    "pandas",
    "polars",
    "pyarrow",
    "pydantic",
    "spxmod @ git+https://github.com/ihmeuw-msca/spxmod.git@df78b0978c1e4259977f05c357de3173b7c1b354",
    "weighted-average >= 1.3.0",
    "xspline == 0.0.7",
]

[project.optional-dependencies]
dev = ["pre-commit>=4.0.1,<5.0.0", "mypy>=1.12.0,<2.0.0", "ruff>=0.7.0,<1.0.0", "build", "pytest>=7.0.0", "pytest-cov>=5.0.0", "python-dotenv"]
docs = ["sphinx", "sphinx-autodoc-typehints", "furo"]
jobmon = ["jobmon_installer_ihme"]
test = ["pytest>=7.0.0", "pytest-cov>=5.0.0", "python-dotenv"]

[project.urls]
github = "https://github.com/ihmeuw-msca/OneMod"

[project.scripts]
onemod = "onemod.main:main"

[tool.ruff]
line-length = 80
src = ["src"]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
task-tags = ["TODO", "FIXME"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
show_error_codes = true
show_error_context = true
mypy_path = ["src"]
