[metadata]
name = OneMod
version = 0.1.0
description =
long_description = file: README.md
long_description_content_type = text/markdown
author = IHME Math Sciences
author_email = ihme.math.sciences@gmail.com
license = BSD 2-Clause License
url = https://stash.ihme.washington.edu/projects/MSCA/repos/onemod/
classifiers =
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
zip_safe = False
install_requires =
    # jobmon
    fire
    modrover @ git+https://github.com/ihmeuw-msca/modrover.git@feature/super_vcov
    regmodsm @ git+https://github.com/ihmeuw-msca/regmodsm.git@v0.1.0
    pandas < 2.0
    pyarrow
    scipy
    regmod == 0.1.0
    weighted-average == 1.1.1
include_package_data = False
packages = find:
package_dir = = src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest

[options.entry_points]
console_scripts =
    onemod = onemod.main:main
    initialize_results = onemod.data.initialize_results:main
    collect_results = onemod.data.collect_results:main
    delete_results = onemod.data.delete_results:main
    rover_covsel_model = onemod.models.rover_covsel_model:main
    regmod_smooth_model = onemod.models.regmod_smooth_model:main
    swimr_model = onemod.models.swimr_model:main
    weave_model = onemod.models.weave_model:main
    ensemble_model = onemod.models.ensemble_model:main
