[metadata]
name = OneMod
version = 0.1.0
description =
long_description = file: README.md
long_description_content_type = text/markdown
author = IHME Math Sciences
author_email = ihme.math.sciences@gmail.com
license = BSD 2-Clause License
url = https://stash.ihme.washington.edu/projects/MSCA/repos/onemod/
classifiers =
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
zip_safe = False
install_requires =
    jobmon_installer_ihme
    fire
    loguru
    modrover @ git+https://github.com/ihmeuw-msca/modrover.git@v0.1.3
    regmodsm @ git+https://github.com/ihmeuw-msca/regmodsm.git@v0.1.1
    pandas < 2.0
    pyarrow
    pydantic
    scipy
    regmod == 0.1.1
    weighted-average == 1.1.1
include_package_data = False
packages = find:
package_dir = = src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest

[options.entry_points]
console_scripts =
    onemod = onemod.main:main
    initialize_results = onemod.actions.data.initialize_results:main
    collect_results = onemod.actions.data.collect_results:main
    delete_results = onemod.actions.data.delete_results:main
    rover_covsel_model = onemod.actions.models.rover_covsel_model:main
    regmod_smooth_model = onemod.actions.models.regmod_smooth_model:main
    swimr_model = onemod.actions.models.swimr_model:main
    weave_model = onemod.actions.models.weave_model:main
    ensemble_model = onemod.models.ensemble_model:main
